Fix z-index of MultiSelectInput__input

--- a/src/core/ui/components/MultiSelectInput/MultiSelectInput.scss
+++ b/src/core/ui/components/MultiSelectInput/MultiSelectInput.scss
@@ -28,6 +28,7 @@
         will-change: box-shadow;
         // reset browser defaults
         outline: 0 !important;
+        z-index: 3;
 
         &:focus {
             box-shadow: 0 0 4px 0 rgba(1, 156, 185, 1), inset 0 0 2px 0 rgba(193, 193, 193, 0.5);
